tests/NormalTests/paczka1/fuzzy1/41292227.err
Error in line 4: Kg8c4 S880 9,9
Error in line 7: I9za A661 92,4
Error in line 2: SV1Es A658 80,3
Error in line 18: SV1Es S880 41,4
Error in line 11: Kg8c4 A658 62,6
Error in line 20: SV1Es A661 67,4
Error in line 14: nG3WJKnhaV2 S880 44,3
Error in line 12: I9za S880 95,4
Error in line 26: SV1Es S696 71,5
Error in line 36: SV1Es S880 75,9
